--- a/www/es/acerca-de-mi.html
+++ b/www/es/acerca-de-mi.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Contactanos. A la clé, Academia y Clases de Francés. Zaragoza</title>
-    <meta name="description" content="Contactanos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <title>Acerca de mí. A la clé, Academia y Clases de Francés. Zaragoza</title>
+    <meta name="description" content="Acerca de mí. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
     <meta name="keywords" content="espacio, educativo, academia, cursos, talleres, frances, clases, FLE, a la cle, zaragoza" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -27,8 +27,8 @@
 	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/contacto.html" hreflang="es-es" />
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/contact.html" hreflang="fr-fr" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/acerca-de-mi.html" hreflang="es-es" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/qui-nous-sommes.html" hreflang="fr-fr" />
 </head>
 <body>
 
@@ -91,8 +91,8 @@
 
 			<!--
             <ul id="language-switch">
-                <li><a href="es/contacto.html" id="lang-es" title="Español">ES</a></li>
-                <li><a href="fr/contact.html" id="lang-fr" title="Français">FR</a></li>
+                <li><a href="es/acerca-de-mi.html" id="lang-es" title="Español">ES</a></li>
+                <li><a href="fr/qui-nous-sommes.html" id="lang-fr" title="Français">FR</a></li>
             </ul>
 			-->
 			<hr />
@@ -103,28 +103,26 @@
 <main role="main">
     <section>
         <header>
-            <h2>Contactanos</h2>
+            <h2>Acerca de mí</h2>
         </header>
         <article>
             <div id="block-content">
-                <h3>Detalles de Contacto</h3><ul class="fa-ul" id="contact-details">
-    <li><i class="fa fa-li fa-envelope-o"></i> Correo Electrónico : <strong><a href="mailto:alaclehelene@gmail.com">alaclehelene[at]gmail.com</a></strong></li>
-    <li><i class="fa fa-li fa-whatsapp"></i> Teléfono y WhatsApp : <strong>640 063 726</strong> (De Lunes a viernes de 10h a 20h)</li>
-    <li><i class="fa fa-li fa-map-marker"></i> Dirección : <strong>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</strong></li>
-    <li><i class="fa fa-li fa-facebook-official"></i> Página FaceBook : <strong><a href="https://www.facebook.com/alaclezaragoza/">facebook.com/alaclezaragoza</a></strong></li>
-</ul>
+                <!--
+### Erase una vez...
 
-<div class="row">
-<div class="column-two-thirds" id="contact-map">
-    <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.450953495547!2d-0.8728148849707953!3d41.6459977792413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914f9bae1ba23%3A0xa43b333736427ace!2sAv.+Compromiso+de+Caspe%2C+14%2C+50002+Zaragoza%2C+Spain!5e0!3m2!1sen!2sus!4v1500463579606" width="400" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div><div class="column-one-third">
-    <hr>
-    <div class="fb-page" data-href="https://www.facebook.com/alaclezaragoza/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
-            <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alaclezaragoza/"><a href="https://www.facebook.com/alaclezaragoza/">A la clé</a></blockquote></div>
-    </div>
-</div>
-</div>
+... Dos nativas francesas: **Elodie Raoul** y **Hélène Pitot**, originarias respectivamente de Bordeaux y Tours. Nos hemos conocido en Zaragoza y de este encuentro ha nacido la idea de crear un lugar donde combinar la enseñanza del francés para extranjeros, con un espacio cultural donde puedan reunirse francófonos y francófilos. Pudiendo así disfrutar de un gran abanico de actividades relacionadas con la francofonía.
+
+### ¿Quiénes somos?
+
+Somos dos personas complementarias, especialistas en distintos ámbitos educativos:
+
+- **Por un lado** : una educadora con aptitudes para acompañar a los niños en su crecimiento, proporcionándoles herramientas adaptadas a su evolución, tanto personal como educacional. Tiene además una formación en Pedagogía Sistémica. Ha estado trabajando 5 años en el Lycée Français Molière de Zaragoza y en escuelas infantiles. Su formación y experiencia en educación le confieren las competencias necesarias para la enseñanza del francés.
+- **Por otro lado** : una profesora de Francés como Lengua Extranjera (FLE) con formación y amplia experiencia en educación. Gracias a la variedad educativa seguida (filología hispánica y francesa, Máster de Educación y una formación de FLE impartida por la Alianza francesa de París), está habilitada a impartir clases a todos niveles y edades. Capacitada pues, a enseñar tanto para ocio como para preparaciones a exámenes tipo DELF y DALF. Su alto nivel de español le permite además anticipar los fallos más recurrentes en los hispanohablantes.
+
+Contamos también con un equipo de profesionales especializados y voluntarios que dominan el idioma francés, para intervenir en varias actividades ofertadas.
+-->
+<p><strong>Me llamo Hélène. Soy nativa francesa, originaria de Tours (Zona de los Castillos del Loira).</strong></p>
+<p>Me formé para la enseñanza estudiando Filología Hispánica, así como un Máster de Educación y una formación de <strong>Francés como Lengua Extranjera (FLE)</strong> impartida por la Alianza Francesa de París. Desde mi llegada a Zaragoza en 2009 he trabajado como profesora de francés, impartiendo clases a todos los niveles y edades, individuales y grupos, y tanto a particulares como a empresas. También dispongo de experiencia preparando exámenes oficiales tipo <strong>Escuela de Idiomas, DELF y DALF</strong>.</p>
             </div>
         </article>
     </section>
