--- a/www/es/clases-frances.html
+++ b/www/es/clases-frances.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Contactanos. A la clé, Academia y Clases de Francés. Zaragoza</title>
-    <meta name="description" content="Contactanos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <title>Clases individuales o en grupos reducidos. A la clé, Academia y Clases de Francés. Zaragoza</title>
+    <meta name="description" content="Clases individuales o en grupos reducidos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
     <meta name="keywords" content="espacio, educativo, academia, cursos, talleres, frances, clases, FLE, a la cle, zaragoza" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -27,8 +27,8 @@
 	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/contacto.html" hreflang="es-es" />
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/contact.html" hreflang="fr-fr" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/clases-frances.html" hreflang="es-es" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/cours-de-francais-au-sein-du-centre.html" hreflang="fr-fr" />
 </head>
 <body>
 
@@ -91,8 +91,8 @@
 
 			<!--
             <ul id="language-switch">
-                <li><a href="es/contacto.html" id="lang-es" title="Español">ES</a></li>
-                <li><a href="fr/contact.html" id="lang-fr" title="Français">FR</a></li>
+                <li><a href="es/clases-frances.html" id="lang-es" title="Español">ES</a></li>
+                <li><a href="fr/cours-de-francais-au-sein-du-centre.html" id="lang-fr" title="Français">FR</a></li>
             </ul>
 			-->
 			<hr />
@@ -103,28 +103,99 @@
 <main role="main">
     <section>
         <header>
-            <h2>Contactanos</h2>
+            <h2>Clases individuales o en grupos reducidos</h2>
         </header>
         <article>
             <div id="block-content">
-                <h3>Detalles de Contacto</h3><ul class="fa-ul" id="contact-details">
-    <li><i class="fa fa-li fa-envelope-o"></i> Correo Electrónico : <strong><a href="mailto:alaclehelene@gmail.com">alaclehelene[at]gmail.com</a></strong></li>
-    <li><i class="fa fa-li fa-whatsapp"></i> Teléfono y WhatsApp : <strong>640 063 726</strong> (De Lunes a viernes de 10h a 20h)</li>
-    <li><i class="fa fa-li fa-map-marker"></i> Dirección : <strong>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</strong></li>
-    <li><i class="fa fa-li fa-facebook-official"></i> Página FaceBook : <strong><a href="https://www.facebook.com/alaclezaragoza/">facebook.com/alaclezaragoza</a></strong></li>
-</ul>
+                <h3>En el aula</h3><p>Para particulares, imparto las clases exclusivamente en mi aula, donde dispongo de una <strong>sala totalmente equipada</strong> con todo el material necesario para una mayor eficacia.</p>
+<p>Propongo dos tipos de clases, <strong>individuales o en grupos reducidos</strong> <sup>(<a href="es/clases-frances.html#grupos">1</a>)</sup> con sistema de bonos:</p>
+<table>
+    <tr>
+    <td width="20%">Curso Completo</td>
+    <td width="20%">6 meses</td>
+    <td width="20%">1 mes</td>
+    <td width="20%">Por semanas</td>
+    <td width="20%">5 horas</td>
+    </tr>
+</table>
 
-<div class="row">
-<div class="column-two-thirds" id="contact-map">
-    <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.450953495547!2d-0.8728148849707953!3d41.6459977792413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914f9bae1ba23%3A0xa43b333736427ace!2sAv.+Compromiso+de+Caspe%2C+14%2C+50002+Zaragoza%2C+Spain!5e0!3m2!1sen!2sus!4v1500463579606" width="400" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div><div class="column-one-third">
-    <hr>
-    <div class="fb-page" data-href="https://www.facebook.com/alaclezaragoza/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
-            <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alaclezaragoza/"><a href="https://www.facebook.com/alaclezaragoza/">A la clé</a></blockquote></div>
-    </div>
-</div>
-</div>
+
+<ul>
+<li>Los grupos son de hasta 5 estudiantes, para favorecer un aprendizaje dinámico y personalizado a la vez que ameno y lúdico.</li>
+<li>Recomiendo sesiones de hora y media, pero también se puede optar por clases de una o dos horas.</li>
+</ul>
+<p>Las clases están especialmente diseñadas en función de la edad y del objetivo del alumno. Pueden ser clases tanto de <strong><a href="es/preparacion-examenes.html">preparación a exámenes oficiales</a></strong> (DELF/DALF, Escuela de Idiomas…), enfocadas a las necesidades <strong><a href="es/ensenanza.html">laborales para particulares</a></strong> o <strong><a href="es/formacion-frances-empresas.html">empresas</a></strong>, como <strong><a href="es/conversacion.html">conversacionales</a></strong>. También imparto clases para alumnos que <strong><a href="es/ensenanza.html">preparan su movilidad</a></strong> a un país francófono, ayudándoles a afrontar las situaciones cotidianas. Además, doy clases de <strong>Formación de formadores</strong>, para profesores de francés interesados perfeccionar sus mecanismos de enseñanza del Francés como Lengua Extranjera (FLE).</p>
+<hr>
+<h4>Clases Individuales</h4><table>
+    <thead>
+        <tr>
+            <th>Puntos Positivos</th>
+            <th>Pero...</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <ul>
+                    <li>Clases adaptadas a tus necesidades</li>
+                    <li>Avanzas a tu ritmo</li>
+                    <li>Consolidas tus bases</li>
+                    <li>Recibes toda la atención del profesor</li>
+                    <li>Flexibilidad horaria</li>
+                    <li>Posibilidad de pedir horas sueltas</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>No aprovechas de los puntos fuertes y de los fallos de los demás</li>
+                    <li>Clases con menos interacción oral</li>
+                    <li>Clases más intensas y densas</li>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<hr>
+<h4>Grupos Reducidos (hasta 5 estudiantes)</h4><p>Para las clases en grupo realizo previamente una prueba de nivel gratuita para formar un grupo lo más homogéneo posible.</p>
+<table>
+    <thead>
+        <tr>
+            <th>Puntos Positivos</th>
+            <th>Pero...</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <ul>
+                    <li>Clases adaptadas tus necesidades</li>
+                    <li>Consolidas tus bases</li>
+                    <li>Recibes mucha atención del profesor</li>
+                    <li>Clases más dinámicas y amenas</li>
+                    <li>Mucha interacción oral</li>
+                    <li>Aprendes de los demás</li>
+                    <li>Precio más económico</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Clases centradas no sólo en ti sino en el grupo</li>
+                    <li>Puedes sentir un poco de timidez al principio</li>
+                    <li>Menos flexibilidad horaria</li>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<hr>
+<ul>
+<li><a href="https://goo.gl/forms/J8FFLeCxKEuWTSye2" onclick="window.open(this.href, 'presupuesto', 'width=800,height=600'); return false"><i class="fa fa-file-text-o" aria-hidden="true"></i>
+<strong>Pedir un presupuesto</strong></a></li>
+</ul>
+<hr>
+<p><a name="grupos"></a><sup>(1)</sup> <em>Para entrar en un grupo, es necesario elegir el mismo bono que los demás alumnos que lo componen. Me reservo el derecho de cerrar el grupo en caso de no tener un número de estudiantes suficiente para un determinado nivel. Para más información, <a href="es/tarifas-y-condiciones.html">ver las condiciones</a>.</em></p>
             </div>
         </article>
     </section>
