--- a/www/es/formacion-frances-empresas.html
+++ b/www/es/formacion-frances-empresas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Contactanos. A la clé, Academia y Clases de Francés. Zaragoza</title>
-    <meta name="description" content="Contactanos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <title>Formación de francés a empresas. A la clé, Academia y Clases de Francés. Zaragoza</title>
+    <meta name="description" content="Formación de francés a empresas. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
     <meta name="keywords" content="espacio, educativo, academia, cursos, talleres, frances, clases, FLE, a la cle, zaragoza" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -27,8 +27,8 @@
 	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/contacto.html" hreflang="es-es" />
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/contact.html" hreflang="fr-fr" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/formacion-frances-empresas.html" hreflang="es-es" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/cours-de-francais-en-institutions.html" hreflang="fr-fr" />
 </head>
 <body>
 
@@ -91,8 +91,8 @@
 
 			<!--
             <ul id="language-switch">
-                <li><a href="es/contacto.html" id="lang-es" title="Español">ES</a></li>
-                <li><a href="fr/contact.html" id="lang-fr" title="Français">FR</a></li>
+                <li><a href="es/formacion-frances-empresas.html" id="lang-es" title="Español">ES</a></li>
+                <li><a href="fr/cours-de-francais-en-institutions.html" id="lang-fr" title="Français">FR</a></li>
             </ul>
 			-->
 			<hr />
@@ -103,28 +103,48 @@
 <main role="main">
     <section>
         <header>
-            <h2>Contactanos</h2>
+            <h2>Formación de francés a empresas</h2>
         </header>
         <article>
             <div id="block-content">
-                <h3>Detalles de Contacto</h3><ul class="fa-ul" id="contact-details">
-    <li><i class="fa fa-li fa-envelope-o"></i> Correo Electrónico : <strong><a href="mailto:alaclehelene@gmail.com">alaclehelene[at]gmail.com</a></strong></li>
-    <li><i class="fa fa-li fa-whatsapp"></i> Teléfono y WhatsApp : <strong>640 063 726</strong> (De Lunes a viernes de 10h a 20h)</li>
-    <li><i class="fa fa-li fa-map-marker"></i> Dirección : <strong>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</strong></li>
-    <li><i class="fa fa-li fa-facebook-official"></i> Página FaceBook : <strong><a href="https://www.facebook.com/alaclezaragoza/">facebook.com/alaclezaragoza</a></strong></li>
-</ul>
+                <h3>Dentro o fuera del aula</h3><p>Son clases enfocadas a formar al personal de las empresas para que pueda desenvolverse con más facilidad en su trabajo cotidiano. Baso la enseñanza en las necesidades de la empresa, adaptando los contenidos a la realidad laboral de la plantilla.</p>
+<p>Enseño con documentos específicos al área profesional de la empresa, insistiendo en las competencias más importante para el buen desarrollo del trabajo que se tiene que efectuar en francés (preparar una movilidad a un país francófono, contestar por teléfono, corresponder por correo electrónico o por carta…).</p>
+<p>Me desplazo a las empresas para grupos desde 5 personas, con un suplemento de desplazamiento por grupo (y no por persona).
+Con grupos inferiores realizo la formación en mi aula.</p>
+<p>Dispongo de una amplia disponibilidad de horarios, desde temprano por la mañana hasta tarde por la noche, incluido horas al mediodía.</p>
+<table>
+    <thead>
+        <tr>
+            <th>Ventajas de las clases en el aula</th>
+            <th>Ventajas de las clases en la empresa</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <ul>
+                    <li>Aula totalmente equipada (pizarra, audiovisual…) con acceso directo a todo el material</li>
+                    <li>Acceso a la biblioteca con préstamo de libros, cds y dvds</li>
+                    <li>Más flexibilidad horaria</li>
+                    <li>Coste reducido</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Recibir las clases en el mismo lugar de trabajo</li>
+                    <li>Mejor compaginación entre trabajo y formación</li>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
-<div class="row">
-<div class="column-two-thirds" id="contact-map">
-    <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.450953495547!2d-0.8728148849707953!3d41.6459977792413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914f9bae1ba23%3A0xa43b333736427ace!2sAv.+Compromiso+de+Caspe%2C+14%2C+50002+Zaragoza%2C+Spain!5e0!3m2!1sen!2sus!4v1500463579606" width="400" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div><div class="column-one-third">
-    <hr>
-    <div class="fb-page" data-href="https://www.facebook.com/alaclezaragoza/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
-            <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alaclezaragoza/"><a href="https://www.facebook.com/alaclezaragoza/">A la clé</a></blockquote></div>
-    </div>
-</div>
-</div>
+<p><em>En calidad de autónoma, emito facturas (Actividad EXENTA de IVA según el artículo 20,1.9ª de la Ley 37/1992 del IVA).</em></p>
+<hr>
+<ul>
+<li><a href="https://goo.gl/forms/J8FFLeCxKEuWTSye2" onclick="window.open(this.href, 'presupuesto', 'width=800,height=600'); return false"><i class="fa fa-file-text-o" aria-hidden="true"></i>
+<strong>Pedir un presupuesto</strong></a></li>
+</ul>
             </div>
         </article>
     </section>
