--- a/www/es/preparacion-examenes.html
+++ b/www/es/preparacion-examenes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Contactanos. A la clé, Academia y Clases de Francés. Zaragoza</title>
-    <meta name="description" content="Contactanos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <title>Preparación a exámenes. A la clé, Academia y Clases de Francés. Zaragoza</title>
+    <meta name="description" content="Preparación a exámenes. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
     <meta name="keywords" content="espacio, educativo, academia, cursos, talleres, frances, clases, FLE, a la cle, zaragoza" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -27,8 +27,8 @@
 	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/contacto.html" hreflang="es-es" />
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/contact.html" hreflang="fr-fr" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/preparacion-examenes.html" hreflang="es-es" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/" hreflang="fr-fr" />
 </head>
 <body>
 
@@ -91,8 +91,8 @@
 
 			<!--
             <ul id="language-switch">
-                <li><a href="es/contacto.html" id="lang-es" title="Español">ES</a></li>
-                <li><a href="fr/contact.html" id="lang-fr" title="Français">FR</a></li>
+                <li><a href="es/preparacion-examenes.html" id="lang-es" title="Español">ES</a></li>
+                <li><a href="fr/" id="lang-fr" title="Français">FR</a></li>
             </ul>
 			-->
 			<hr />
@@ -103,28 +103,42 @@
 <main role="main">
     <section>
         <header>
-            <h2>Contactanos</h2>
+            <h2>Preparación a exámenes</h2>
         </header>
         <article>
             <div id="block-content">
-                <h3>Detalles de Contacto</h3><ul class="fa-ul" id="contact-details">
-    <li><i class="fa fa-li fa-envelope-o"></i> Correo Electrónico : <strong><a href="mailto:alaclehelene@gmail.com">alaclehelene[at]gmail.com</a></strong></li>
-    <li><i class="fa fa-li fa-whatsapp"></i> Teléfono y WhatsApp : <strong>640 063 726</strong> (De Lunes a viernes de 10h a 20h)</li>
-    <li><i class="fa fa-li fa-map-marker"></i> Dirección : <strong>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</strong></li>
-    <li><i class="fa fa-li fa-facebook-official"></i> Página FaceBook : <strong><a href="https://www.facebook.com/alaclezaragoza/">facebook.com/alaclezaragoza</a></strong></li>
+                <p>Las clases de preparación a exámenes pueden ser <a href="es/clases-frances.html">individuales o grupales</a>, con el <a href="es/clases-frances.html">bono</a> de tu elección.</p>
+<p>Gracias tanto a mi formación en Francés como a mi <a href="es/acerca-de-mi.html">experiencia</a> como profesora, estoy al tanto de los criterios de evaluación para las pruebas oficiales de la Escuela de Idioma o del DELF/DALF desde el nivel principiante hasta avanzado (A1-C2).</p>
+<p>A lo largo de estos años enseñando, he podido comprobar los fallos más frecuentes de los estudiantes hispanohablantes. Por eso he adaptado mi enseñanza ofreciendo :</p>
+<ul>
+<li><a href="es/preparacion-examenes.html#criterios-evaluacion">Explicitar los criterios de evaluación</a></li>
+<li><a href="es/preparacion-examenes.html#proporcionar-metodologia">Proporcionar metodología para las 4 tareas</a></li>
+<li><a href="es/preparacion-examenes.html#trabajar-con-ejemplos">Trabajar con ejemplos de pruebas oficiales</a></li>
 </ul>
-
-<div class="row">
-<div class="column-two-thirds" id="contact-map">
-    <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.450953495547!2d-0.8728148849707953!3d41.6459977792413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914f9bae1ba23%3A0xa43b333736427ace!2sAv.+Compromiso+de+Caspe%2C+14%2C+50002+Zaragoza%2C+Spain!5e0!3m2!1sen!2sus!4v1500463579606" width="400" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div><div class="column-one-third">
-    <hr>
-    <div class="fb-page" data-href="https://www.facebook.com/alaclezaragoza/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
-            <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alaclezaragoza/"><a href="https://www.facebook.com/alaclezaragoza/">A la clé</a></blockquote></div>
-    </div>
-</div>
-</div>
+<p>Las semanas anteriores al examen doy la posibilidad de realizar un <a href="es/cursos-intensivos.html">curso intensivo</a> en el que el estudiante afianza sus conocimientos para sentirse más seguro el día de la prueba.</p>
+<ul>
+<li><a href="https://goo.gl/forms/J8FFLeCxKEuWTSye2" onclick="window.open(this.href, 'presupuesto', 'width=800,height=600'); return false"><i class="fa fa-file-text-o" aria-hidden="true"></i>
+<strong>Pedir un presupuesto</strong></a></li>
+</ul>
+<hr>
+<h4><a name="criterios-evaluacion"></a> Explicitar de los criterios de evaluación.</h4><p>Los exámenes oficiales, tanto de la Escuela de Idiomas, de los Institutos o Alianzas franceses como de las Universidades están reglamentados por los Criterios de Evaluación establecido por el Marco Europeo Común de Referencia para la Lengua (MCERL)
+El MCERL describe las distintas competencias de uso de la lengua divididas en cuatro categorías clasificadas en seis niveles, del A1 al C2 :</p>
+<p><a name="competencias-MCERL"></a></p>
+<ul>
+<li><em>Comprensión escrita</em></li>
+<li><em>Comprensión oral</em></li>
+<li><em>Expresión escrita</em></li>
+<li><em>Expresión oral</em></li>
+</ul>
+<p>Muchas veces, los estudiantes que se preparan para las pruebas de idiomas no tienen totalmente claro lo que se espera de ellos. Así que empiezo por explicitarles lo que los examinadores van a valorar. De esta forma, adquieren unos mecanismos de estudio totalmente adecuados al examen al que se presentan. Les permite ganar en seguridad y en eficiencia.</p>
+<hr>
+<h4><a name="proporcionar-metodologia"></a> Proporcionar metodología para las 4 pruebas.</h4><p>Para cada una de las <a href="es/preparacion-examenes.html#competencias-MCERL">4 competencias</a> lingüísticas, proporciono unas herramientas y una metodología específica que le permitirá adecuarse mejor a las exigencias de las pruebas. Según los criterios de evaluación descritos en el <a href="es/preparacion-examenes.html#criterios-evaluacion">MCERL</a>, para las tareas de expresión oral y escrita, el estudiante está valorado tanto por su capacidad lingüística como por si competencia organizativa del discurso.</p>
+<p>Para poder conseguir más coherencia y cohesión comunicativa, aporto a mis alumnos unas pautas claras con las que estructurar su discurso. Les permite, por un lado, reducir su nivel de estrés, ya que automatizan la forma de realizar las diferentes tareas y pueden así centrarse en los aspectos puramente lingüísticos.</p>
+<p>Esta metodología les podrá resultar útil también para su vida educacional, así como en el ámbito profesional o personal, sobre todo a la hora de hablar en público o de redactar algún documento oficial.</p>
+<hr>
+<h4><a name="trabajar-con-ejemplos"></a> Trabajar con ejemplos de pruebas oficiales.</h4><p>Antes de presentarse al examen, me parece fundamental que el estudiante haya ensayado con pruebas de años anteriores para tener una muestra de lo que tendrá que realizar.</p>
+<p>Por eso dispongo de pruebas sacadas de los anales de los exámenes de la Escuela de Idiomas así como de Institutos y Alianzas franceses.
+También proporciono una gran variedad de documentos creados específicamente para el ejercicios de las 4 competencias, para adquirir progresivamente las capacidades requeridas.</p>
             </div>
         </article>
     </section>
