--- a/www/es/servicios.html
+++ b/www/es/servicios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Contactanos. A la clé, Academia y Clases de Francés. Zaragoza</title>
-    <meta name="description" content="Contactanos. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <title>Servicios. A la clé, Academia y Clases de Francés. Zaragoza</title>
+    <meta name="description" content="Servicios. Academia de francés A la clé Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
     <meta name="keywords" content="espacio, educativo, academia, cursos, talleres, frances, clases, FLE, a la cle, zaragoza" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -27,8 +27,8 @@
 	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/contacto.html" hreflang="es-es" />
-    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/contact.html" hreflang="fr-fr" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/servicios.html" hreflang="es-es" />
+    <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/fr/quoffrons-nous.html" hreflang="fr-fr" />
 </head>
 <body>
 
@@ -91,8 +91,8 @@
 
 			<!--
             <ul id="language-switch">
-                <li><a href="es/contacto.html" id="lang-es" title="Español">ES</a></li>
-                <li><a href="fr/contact.html" id="lang-fr" title="Français">FR</a></li>
+                <li><a href="es/servicios.html" id="lang-es" title="Español">ES</a></li>
+                <li><a href="fr/quoffrons-nous.html" id="lang-fr" title="Français">FR</a></li>
             </ul>
 			-->
 			<hr />
@@ -103,28 +103,18 @@
 <main role="main">
     <section>
         <header>
-            <h2>Contactanos</h2>
+            <h2>Servicios</h2>
         </header>
         <article>
             <div id="block-content">
-                <h3>Detalles de Contacto</h3><ul class="fa-ul" id="contact-details">
-    <li><i class="fa fa-li fa-envelope-o"></i> Correo Electrónico : <strong><a href="mailto:alaclehelene@gmail.com">alaclehelene[at]gmail.com</a></strong></li>
-    <li><i class="fa fa-li fa-whatsapp"></i> Teléfono y WhatsApp : <strong>640 063 726</strong> (De Lunes a viernes de 10h a 20h)</li>
-    <li><i class="fa fa-li fa-map-marker"></i> Dirección : <strong>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</strong></li>
-    <li><i class="fa fa-li fa-facebook-official"></i> Página FaceBook : <strong><a href="https://www.facebook.com/alaclezaragoza/">facebook.com/alaclezaragoza</a></strong></li>
+                <h4>Propongo una oferta educativa adaptada a todas las necesidades, enseñando desde niveles principiantes hasta avanzados:</h4><ul>
+<li><a href="es/formacion-frances-empresas.html">Formación de francés a empresas</a></li>
+<li><a href="es/clases-frances.html">Clases individuales o en grupos reducidos</a></li>
+<li><a href="es/preparacion-examenes.html">Preparación a exámenes</a></li>
+<li><a href="es/ensenanza.html">Enseñanza con Objetivos Específicos</a></li>
+<li><a href="es/cursos-intensivos.html">Cursos intensivos</a></li>
+<li><a href="es/conversacion.html">Conversación</a></li>
 </ul>
-
-<div class="row">
-<div class="column-two-thirds" id="contact-map">
-    <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.450953495547!2d-0.8728148849707953!3d41.6459977792413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914f9bae1ba23%3A0xa43b333736427ace!2sAv.+Compromiso+de+Caspe%2C+14%2C+50002+Zaragoza%2C+Spain!5e0!3m2!1sen!2sus!4v1500463579606" width="400" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div><div class="column-one-third">
-    <hr>
-    <div class="fb-page" data-href="https://www.facebook.com/alaclezaragoza/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
-            <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alaclezaragoza/"><a href="https://www.facebook.com/alaclezaragoza/">A la clé</a></blockquote></div>
-    </div>
-</div>
-</div>
             </div>
         </article>
     </section>
