--- a/www/fr/index.html
+++ b/www/fr/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://alterebro.github.io/alacle.harpjs/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A la clé Zaragoza. Academia y Clases de Francés en Zaragoza." />
-    <meta property="og:description" content="Espacio Educativo y Cultural A la clé : Français Langue Etrangère. Academia de francés en Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <meta property="og:description" content="Aula de Formación de Francés 'A la clé'. Français Langue Etrangère. Academia de francés en Zaragoza. Clases de Francés como lengua extranjera." />
     <meta property="og:image" content="https://alterebro.github.io/alacle.harpjs/brand/frontend/images/alacle-logo-fulltone-primary.png" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="format-detection" content="address=no" />
@@ -24,8 +24,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900,300italic,400italic,700italic,900italic" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300italic,400,400italic,700,700italic,800,800italic" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.print.css" media="print" rel="stylesheet" type="text/css" />
+	
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     
     <link rel="alternate" href="https://alterebro.github.io/alacle.harpjs/es/" hreflang="es-es" />
@@ -50,9 +49,9 @@
         <div class="hgroup">
             <h1><a href="https://alterebro.github.io/alacle.harpjs/fr/" title="À la clé. Academia y clases de Francés, Zaragoza"><strong>à la clé.</strong> français langue étrangère</a></h1>
             <ul class="fa-ul">
-                <li><i class="fa-li fa fa-map-marker"></i> Av. Tenor Fleta, 53, 50008 Zaragoza, España</li>
-                <li><i class="fa-li fa fa-phone"></i> <strong>876 017 221</strong> / 640 063 726 / 638 016 039</li>
-                <li><i class="fa-li fa fa-envelope-o"></i> <a href="mailto:alaclefrances@gmail.com">alaclefrances@gmail.com</a></li>
+                <li><i class="fa-li fa fa-map-marker"></i>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</li>
+                <li><i class="fa-li fa fa-phone"></i> <strong>640 063 726</strong></li>
+                <li><i class="fa-li fa fa-envelope-o"></i> <a href="mailto:alaclehelene@gmail.com">alaclehelene@gmail.com</a></li>
             </ul>
             <hr />
         </div>
@@ -84,11 +83,13 @@
 
             
 
+			<!--
             <ul id="language-switch">
                 <li><a href="es/" id="lang-es" title="Español">ES</a></li>
                 <li><a href="fr/" id="lang-fr" title="Français">FR</a></li>
             </ul>
-            <hr />
+			-->
+			<hr />
         </nav>
     </div>
 </header>
@@ -129,8 +130,8 @@
     </div>
     <div id="footer-credits">
         <p class="address">
-            <strong><a href="https://alterebro.github.io/alacle.harpjs/" title="Academia de Francés. Zaragoza">A la clé</a>.</strong> Français langue étrangère <span class="copyright">© 2015</span>
-            <span><br />Avenida del Tenor Fleta, n.53,</span> <span>CP 50008 Zaragoza, España.</span>
+            <strong><a href="https://alterebro.github.io/alacle.harpjs/" title="Academia de Francés. Zaragoza">A la clé</a>.</strong> Français langue étrangère <span class="copyright">© 2017</span>
+            <span><br />Av. Compromiso de Caspe, nº14, Oficina 11,</span> <span>CP 50002 Zaragoza, España.</span>
         </p>
         <p class="author">
             Diseño y Desarrollo Web : <a href="http://moro.es" title="Jorge Moreno. UI Designer and Front End Web Developer. Zaragoza, Spain" target="_blank">moro.es</a>
